# isodistrreg

./: .Rbuildignore  .gitignore  Cargo.toml  DESCRIPTION  NAMESPACE  NEWS.md  README.Rmd  README.md  isodistrreg.Rproj  simulation_example.R  simulation_example_functions.R
.github/workflows/: ci.yml
R/: RcppExports.R  bagging.R  data.R  dindexm.R  evaluation.R  fast.R  modeling.R  multivHazardLoop.R  package.R  partialOrders.R
bindings/R/: .Rbuildignore  .gitignore  .lintr  DESCRIPTION  NAMESPACE  NEWS.md  README.Rmd  README.md  bootstrap.R  isodistrreg.Rproj  simulation_example.R  simulation_example_functions.R
bindings/R/R/: bagging.R  data.R  dindexm.R  evaluation.R  extendr-wrappers.R  modeling.R  package.R
bindings/R/inst/: CITATION
bindings/R/man/: bscore.Rd  cdf.Rd  crps.Rd  dindexm.Rd  dot-onUnload.Rd  idr.Rd  idrbag.Rd  isodistrreg-package.Rd  isotonic_regression.Rd  pit.Rd  plain_survival_isotonic_distributional_regression.Rd  plain_survival_isotonic_distributional_regression_threshold.Rd  predict.dindexfit.Rd  predict.idrfit.Rd  qpred.Rd  qscore.Rd  rain.Rd  survival_isotonic_distributional_regression_threshold.Rd  warn_once.Rd
bindings/R/src/: Makevars.in  Makevars.win.in  entrypoint.c  isodistrreg-win.def
bindings/R/src/rust/: .gitignore  Cargo.toml  document.rs
bindings/R/src/rust/src/: lib.rs  logging.rs
bindings/R/tests/: testthat.R
bindings/R/tests/testthat/: test-evaluation.R  test-idr-bag.R  test-isotonic-regression.R  test-partial-order.R  test-total-order-hazard.R  test-total-order.R
bindings/R/vignettes/: IDR_arXiv_preprint.Rnw  IDR_arXiv_preprint.tex
bindings/python/: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  pyproject.toml
bindings/python/src/: lib.rs  park.rs
bindings/python/src/isodistrreg/: __init__.py  _core.pyi  estimator.py
bindings/python/tests/: test_idr.py  test_isotonic_regression.py  test_kaplan_meier.py  test_scikit_learn_api_adherence.py
data/: rain.rda
inst/: CITATION
isodistrreg/: Cargo.toml  README.md
isodistrreg/src/: error.rs  lib.rs  prediction.rs  preprocessing.rs  progress.rs  routines.rs  structures.rs  subagging.rs  test.rs
isodistrreg/src/functionals/: mod.rs  recursive_clipping.rs
isodistrreg/src/partial_order/: bit_set.rs  functionals.rs  mod.rs  prediction.rs  preprocessing.rs  routines.rs  structures.rs
isodistrreg/src/partial_order/algorithm/: censored.rs  mod.rs
isodistrreg/src/partial_order/algorithm/uncensored/: hazard_rate_order.rs  mod.rs
isodistrreg/src/total_order/: functionals.rs  mod.rs  prediction.rs  preprocessing.rs  routines.rs  structures.rs  tonic_regression.rs
isodistrreg/src/total_order/hazard_rate_order/: censored.rs  mod.rs  preprocessing.rs  uncensored.rs
isodistrreg/src/total_order/stochastic_dominance/: mod.rs  routines.rs  test.rs  uncensored.rs
isodistrreg/src/total_order/stochastic_dominance/censored/: definition.rs  fast.rs  mod.rs  nonrecursive.rs  preprocessing.rs  propagate_bounds.rs  structures.rs  test.rs
man/: bscore.Rd  compOrd.Rd  crps.Rd  dindexm.Rd  dot-onUnload.Rd  idr.Rd  idrF.Rd  idrbag.Rd  isodistrreg-package.Rd  multivHazardLoop.Rd  neighborPoints.Rd  pit.Rd  plot.idr.Rd  predict.dindexfit.Rd  predict.idrfit.Rd  predictIdrF.Rd  prepareData.Rd  qpred.Rd  qscore.Rd  rain.Rd  reexports.Rd  splitArr.Rd  trReduc.Rd
src/: .gitignore  RcppExports.cpp  idrHazard.cpp  init.c  isoCdf_sequential.cpp
src-i386/: RcppExports.cpp
src-x64/: pavaDec.cpp  pavaMatrix.cpp
vignettes/: IDR_arXiv_preprint-concordance.tex  IDR_arXiv_preprint.Rnw  IDR_arXiv_preprint.tex
