[package]
name = "isodistrreg"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
readme = "README.md"
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
osqp = { workspace = true, optional = true }
itertools = { workspace = true }
rayon = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"], optional = true }
rand = {  version = "0.10.0", optional = true }
bitree = "1.0"

[features]
parallel = ["rayon"]
partial-order = ["osqp"]
subagging = ["rand"]

[dev-dependencies]
approx = "0.5.1"
