[package]
name = "isodistrreg-py"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
readme = "README.md"
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
name = "_core"
# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib"]

[dependencies]
# "extension-module" tells pyo3 we want to build an extension module (skips linking against libpython.so)
# "abi3-py313" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.13
pyo3 = { version = "0.28.2", features = ["extension-module", "abi3-py313", "either"] }
numpy = "0.28.0"
isodistrreg = { workspace = true, features = ["parallel", "serde", "subagging"] }
itertools = { workspace = true }
serde = { workspace = true, features = ["derive"] }
bincode = { version = "2.0.1", features = ["serde"] }
rayon = { workspace = true }
kdam = { version = "0.6", features = ["notebook", "template"] }

[target.'cfg(target_os = "windows")'.dependencies]
pyo3 = { version = "0.28.2", features = ["generate-import-lib"] }
